--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">   
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">  
+        <meta name="viewport" content="width=device-width" /> 
         <title>Responsive Form</title>
         <link type="text/css" rel="stylesheet" href="ResponsiveForm.css">
       
