--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	    </div>
         <div class="box">
 		    <label for="LastName">Email: </label>
-            <input type="text" id="2" name="LastName" class="md" placeholder="e-mail" required/>
+            <input type="email" id="2" name="LastName" class="md" placeholder="e-mail" required/>
 	    </div>
         <div class="box">
 		    <label for="email">Website: </label>
-            <input type="text" id="3" name="email" class="md" placeholder="website-url" required/>
+            <input type="url" id="3" name="email" class="md" placeholder="website-url" required/>
 	    </div>
         <div class="box">
     	    <label for="password">Password: </label>
